# swig-sample

./: CMakeLists.txt  README.md  sample.cpp  sample.h  sample.i
cmake/: SwigCSharp.cmake  SwigJava.cmake  SwigPython.cmake
java/: CMakeLists.txt  JSample.i
python/: CMakeLists.txt  PySample.i  test.py
